# NoteFlow-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
noteflow/: __init__.py  cli.py  core.py  models.py  search.py  storage.py  tui.py
tests/: test_noteflow.py
