[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noteflow-cli"
version = "1.0.0"
description = "🧠 NoteFlow-CLI - Lightweight Terminal Intelligent Note & Knowledge Management Engine | 轻量级终端智能笔记与知识管理引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NoteFlow Team", email = "noteflow@example.com"}
]
keywords = [
    "cli", "notes", "knowledge-management", "terminal", "tui",
    "markdown", "developer-tools", "productivity", "zero-dependencies"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[project.scripts]
noteflow = "noteflow.cli:main"
nf = "noteflow.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/NoteFlow-CLI"
Documentation = "https://github.com/gitstq/NoteFlow-CLI#readme"
Repository = "https://github.com/gitstq/NoteFlow-CLI.git"
Issues = "https://github.com/gitstq/NoteFlow-CLI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["noteflow*"]

[tool.setuptools.package-data]
noteflow = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
